<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.networknt</groupId>
    <artifactId>oauth2</artifactId>
    <packaging>jar</packaging>
    <version>0.1.1-SNAPSHOT</version>
    <name>oauth2</name>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.framework>0.1.1</version.framework>
        <version.jackson>2.8.2</version.jackson>
        <version.slf4j>1.7.21</version.slf4j>
        <version.jose4j>0.5.2</version.jose4j>
        <version.antlr4>4.5.3</version.antlr4>
        <version.commons-lang>2.6</version.commons-lang>
        <version.commons.io>2.5</version.commons.io>
        <version.commons.codec>1.10</version.commons.codec>
        <version.encoder>1.2</version.encoder>
        <version.metrics>3.1.2</version.metrics>
        <version.logback>1.1.7</version.logback>
        <version.junit>4.12</version.junit>
        <version.mockito>2.1.0-beta.124</version.mockito>
        <version.undertow>1.4.0.Final</version.undertow>
        <version.orientdb>2.2.9</version.orientdb>
        <version.jose4j>0.5.2</version.jose4j>
        <version.jsonpath>2.2.0</version.jsonpath>
        <version.httpclient>4.5.2</version.httpclient>
        <version.httpasyncclient>4.1.2</version.httpasyncclient>
        <nexus.server>http://nexus.com:8080</nexus.server>
        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
    </properties>
 
    <dependencies>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>config</artifactId>
            <version>${version.framework}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>utility</artifactId>
            <version>${version.framework}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>security</artifactId>
            <version>${version.framework}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>audit</artifactId>
            <version>${version.framework}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>validator</artifactId>
            <version>${version.framework}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>server</artifactId>
            <version>${version.framework}</version>
        </dependency>
  
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${version.jsonpath}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${version.logback}</version>
        </dependency>
        <dependency>
            <groupId>io.undertow</groupId>
            <artifactId>undertow-core</artifactId>
            <version>${version.undertow}</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.b_c</groupId>
            <artifactId>jose4j</artifactId>
            <version>${version.jose4j}</version>
        </dependency>

      
        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.networknt.server.Server</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-jar</argument>
                        <argument>target/${project.build.finalName}.jar</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>